--- a/index.html
+++ b/index.html
@@ -17,5 +17,34 @@
         <button onclick="fixText()">Исправить</button>
         <button class="copy-button">Копировать</button>
     </div>
+    <hr>
+
+
+<!-- 🧩 GRID HELPER -->
+<section class="tool-section card" id="grid-helper">
+  <h2>🧩 Grid Helper</h2>
+  <p class="description">
+    Загрузите изображение и укажите количество столбцов — сетка обновится автоматически.
+  </p>
+
+  <div class="grid-helper-controls">
+    <label for="colsInput">Количество столбцов:</label>
+    <input type="number" id="colsInput" min="1" max="100" value="4">
+
+    <label for="imageLoader">Изображение:</label>
+    <input type="file" id="imageLoader" accept="image/*">
+  </div>
+
+    <div id="gridInfo" class="grid-info">
+        Размер ячейки: —  
+    </div>
+
+  <div class="grid-helper-preview">
+    <canvas id="gridCanvas"></canvas>
+  </div>
+</section>
+
+
+<script src="grid_helper.js"></script>
 </body>
 </html>
