--- a/prompt-builder/index.html
+++ b/prompt-builder/index.html
@@ -1,25 +1,22 @@
-  <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
   <title>🧠 Prompt Builder</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css?v=2.0">
 </head>
 <body>
   <h1>🧠 Prompt Builder</h1>
   <p class="desc">Заполняйте поля для генерации промпта. Нажмите "Редактировать поля", чтобы управлять структурой и содержимым.</p>
 
   <div class="builder-container">
-    <!-- Панель инструментов -->
     <div class="toolbar">
       <button id="edit-mode-btn">✏️ Редактировать поля</button>
       <button id="copy-btn">📋 Копировать результат</button>
     </div>
 
-    <!-- Live режим -->
+    <!-- Контейнеры для полей -->
     <div id="live-fields-container"></div>
-
-    <!-- Режим редактирования -->
     <div id="edit-fields-container" class="hidden"></div>
 
     <!-- Итоговый промпт -->
@@ -29,8 +26,11 @@
     </div>
   </div>
 
+  <!-- Библиотеки -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.8/clipboard.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/sortablejs@1.15.0/Sortable.min.js"></script>
-  <script src="script.js"></script>
+
+  <!-- Скрипт -->
+  <script src="script.js?v=2.0"></script>
 </body>
 </html>
