Add Undo and Redo functions

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <body>
   <!-- Вкладки -->
   <div class="tabs">
-    <button class="tab-button">Prompt Helper</button>
+    <button class="tab-button">Prompt Cleaner</button>
     <button class="tab-button">Prompt Builder</button>
     <button class="tab-button">Grid Helper</button>
   </div>
