--- a/prompt-helper/index.html
+++ b/prompt-helper/index.html
@@ -2,18 +2,18 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Исправление Промпта</title>
+  <title>Очистка промпта</title>
   <link rel="stylesheet" href="style.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.8/clipboard.min.js"></script>
 </head>
 <body>
-  <h1>Исправление тегов скопированных с сайтов ***booru</h1>
+  <h1>Очистка тегов скопированных с сайтов ***booru</h1>
   <div class="container">
     <label for="input-text">Введите текст:</label><br>
     <textarea id="input-text"></textarea><br>
     <label for="output-text">Результат:</label><br>
     <textarea id="output-text" readonly></textarea><br>
-    <button id="fix-btn">Исправить</button>
+    <button id="fix-btn">Очистить</button>
     <button class="copy-button">Копировать</button>
   </div>
   <script src="script.js"></script>
